objects/bofc__BOFCFieldsAnalyzerPicklistResult__c.object
<CustomObject>
    <fields>
        <fullName>bofc__BOFCFieldsAnalyzerResult__c</fullName>
        <label>BOFCFieldsAnalyzerResult</label>
        <referenceTo>bofc__BOFCFieldsAnalyzerResult__c</referenceTo>
        <relationshipLabel>BOFCFieldsAnalyzerPicklistResult</relationshipLabel>
        <relationshipName>BOFCFieldsAnalyzerPicklistResult</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>bofc__Picklist_Value_Name__c</fullName>
        <label>Picklist Value Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Populated_On__c</fullName>
        <label>Populated On</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>BOFCFieldsAnalyzerPicklistResult</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BOFCFieldsAnalyzerPicklistResult</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>